--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+	font-family: 'S-Core Dream 5';
+	src: url('font/S-CoreDream-5Medium.woff2') format('woff2'),
+			url('font/S-CoreDream-5Medium.woff') format('woff');
+	font-weight: 500;
+	font-style: normal;
+	font-display: swap;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+	font-family: 'S-Core Dream 3';
+	src: url('font/S-CoreDream-3Light.woff2') format('woff2'),
+			url('font/S-CoreDream-3Light.woff') format('woff');
+	font-weight: 300;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: 'S-Core Dream 4';
+	src: url('font/S-CoreDream-4Regular.woff2') format('woff2'),
+			url('font/S-CoreDream-4Regular.woff') format('woff');
+	font-weight: 200;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: 'S-Core Dream 8';
+	src: url('font/S-CoreDream-8Heavy.woff2') format('woff2'),
+			url('font/S-CoreDream-8Heavy.woff') format('woff');
+	font-weight: 800;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: 'S-Core Dream 6';
+	src: url('font/S-CoreDream-6Bold.woff2') format('woff2'),
+			url('font/S-CoreDream-6Bold.woff') format('woff');
+	font-weight: 600;
+	font-style: normal;
+	font-display: swap;
+}
+
+html, body {
+	width: 100%;
+	min-height: 100%;
+	margin: 0px;
+	padding: 0px;
+	overflow-x: hidden;
+}
+
+html {
+	position: relative;
+}
+
+body {
+	background-color: skyblue;
 }
